--- a/app/src/main/res/values-fa/strings.xml
+++ b/app/src/main/res/values-fa/strings.xml
@@ -27,9 +27,9 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="create_folder">ایجاد پوشه</string>
     <string name="create_new_document">ایجاد پرونده جدید</string>
     <string name="move">بریدن</string>
-    <string name="copy">Copy</string>
+    <string name="copy">کپی</string>
     <string name="info">اطلاعات</string>
-    <string name="file_folder_already_exists_please_use_a_different_name">Googel translator</string>
+    <string name="file_folder_already_exists_please_use_a_different_name">پوشه وجود دارد! لطفا از نام دیگری استفاده کنید</string>
     <string name="import_from_device">درون‌ریزی از دستگاه</string>
     <string name="import_">درون‌ریزی</string>
     <string name="append_to_witharg">اضافه کردن %s</string>
@@ -57,14 +57,14 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="render_rtl_language">رندر برای زبان‌های راست به چپ</string>
     <string name="error_cannot_create_notebook_dir__appspecific">خطا: نمی‌توان پوشه‌ی دفترچه را ایجاد کرد</string>
     <string name="last_modified_witharg">آخرین تغییر: %s</string>
-    <string name="last_modified">آخرین تغییر</string>
+    <string name="last_modified">آخرین ویرایش</string>
     <string name="select_this_folder">انتخاب این پوشه</string>
     <string name="select">انتخاب</string>
     <string name="create">ایجاد</string>
     <string name="select_entries">ورودی ها را انتخاب کنید</string>
     <string name="one_item_selected">یک مورد انتخاب شده</string>
     <string name="items_selected_witharg" tools:ignore="PluralsCandidate">%d مورد انتخاب شد</string>
-    <string name="hide_statusbar_at_this_view">Statusleiste in dieser Ansicht ausblenden</string>
+    <string name="hide_statusbar_at_this_view">پنهان کردن نوار وضعیت در این نما</string>
     <string name="hide_statusbar">مخفی کردن نوار وضعیت</string>
     <string name="name">نام</string>
     <string name="url_or_path">آدرس(URL) / مسیر</string>
@@ -80,8 +80,9 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="show_third_party_licenses">نمایش مجوزهای شخص ثالث</string>
     <string name="language_change_restart_description">تغییر زبان برنامه. لازم است برنامه را از نو اجرا کنید تا تغییرات را ببینید</string>
     <string name="language">زبان</string>
+    <string name="storage_permission_required">دسترسی به حافظه جهت خواندن و ذخیره‌سازی فایل‌ها</string>
     <string name="open_with">باز کردن با</string>
-    <string name="sort_by">مرتب‌سازی</string>
+    <string name="sort_by">مرتب‌سازی بر اساس</string>
     <string name="date">مرتب‌سازی بر اساس تاریخ</string>
     <string name="deleteme____1">مرتب‌سازی بر اساس نام</string>
     <string name="size">مرتب‌سازی بر اساس اندازه</string>
@@ -116,16 +117,16 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="create_shortcut">ایجاد میانبر</string>
     <string name="tried_to_create_shortcut_for_this_notice">ما میانبری به این پرونده در صفحه اصلی تلفن شما ایجاد کردیم؛ اما ممکن است بعضی لانچرها از این قابلیت پشتیبانی نکنند.</string>
     <string name="file_not_in_save_path_do_import_notice__appspecific">فایل انتخاب شده در پوشه یادداشت های برنامه نیست. آیا می‌خواهید آن را به پوشه کنونی کپی کنید؟ این موجب رونویسی آن روی فایل‌های هم نام موجود خواهد شد.</string>
-    <string name="file_not_in_current_folder_do_copy__appspecific">El fitxer no es troba a la carpeta actual. Voleu copiar-lo a la carpeta actual? Això sobreescriurà qualsevol fitxer amb el mateix nom.</string>
+    <string name="file_not_in_current_folder_do_copy__appspecific">فایل انتخاب شده در پوشه یادداشت های برنامه نیست. آیا می‌خواهید آن را به پوشه کنونی کپی کنید؟ این موجب بازنویسی آن فایل روی فایل‌های هم نام خواهد شد.</string>
     <string name="files_and_folders">فایل‌ها و پوشه‌ها</string>
     <string name="document_browser">مرورگر پرونده</string>
     <string name="file_browser">کاوش فایل ها</string>
-    <string name="set_due_date">Set due date</string>
-    <string name="insert_replace_date">وارد کردن تصویر</string>
+    <string name="set_due_date">تعیین زمان پایان‌کار</string>
+    <string name="insert_replace_date">وارد کردن تاریخ</string>
     <string name="create_note" needed="false">ایجاد یادداشت</string>
     <string name="special_documents" needed="false">مطالب ویژه</string>
     <string name="keep_screen_on" needed="false">روشن نگه داشتن صفحه نمایش</string>
-    <string name="disallow_screenshots">Disallow screenshots</string>
+    <string name="disallow_screenshots">جلوگیری از اسکرین‌شات</string>
     <string name="back_to_previous_folder" needed="false">بازگشت به پوشه قبلی</string>
     <string name="app_settings" needed="false">تنظیمات برنامه</string>
     <string name="editor_settings" needed="false">تنظیمات ویرایشگر</string>
@@ -136,11 +137,13 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="overall_theme_used_in_app">پوسته‌ای که در تمام برنامه استفاده خواهد شد</string>
     <string name="remember_last_directory">به خاطر سپردن آخرین پوشه</string>
     <string name="syntax_highlighting">مشخص کردن نحو</string>
+    <string name="dynamic_highlighting">رنگ‌آمیزی پویا</string>
     <string name="highlighting_delay">زمان‌بندی رنگی کردن</string>
     <string name="highlighting_delay_lower_value_more_battery_drain_description__appspecific">فاصله زمانی برای به روز رسانی عملیات مشخص کردن را تعیین کنید. عدد پایان تر، مشخص کردن را سریع‌ تر انجام می‌دهد؛ ولی باتری بیشتری مصرف خواهد کرد و شاید باعث کاهش سرعت اپ در دستگاه های ضعیف تر شود.</string>
     <string name="highlighting_enabled_or_not__appspecific">مشخص کنید که آیا متن وارد شده باید مشخص شود(هایلایت) یا نه</string>
+    <string name="dynamic_highlighting_effect">رنگ‌آمیزی پویا عملکرد را شدت می‌بخشد. ممکن است مشکلاتی در زمینه‌ی رندرینگ گرافیکی برنامه ایجاد کند.</string>
     <string name="control_font_size_in_editor">کنترل اندازه قلم ویرایشگر</string>
-    <string name="textactions_show_useful_actions_description__appspecific">نمایش یک نوار با عملکردهای کاربردی برای افزودن ماژول‌های متنی متداول</string>
+    <string name="textactions_show_useful_actions_description__appspecific">نمایش یک نوار با عملکردهای کاربردی. این دکمه‌ها فرایندهایی جهت ویرایش متن فراهم می‌کنند.</string>
     <string name="load_last_opened_folder_at_startup">بارگزاری آخرین پوشه باز شده هنگام راه‌اندازی</string>
     <string name="format">فرمت</string>
     <string name="contexts">متن ها</string>
@@ -148,9 +151,9 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="projects">پروژه‌ها</string>
     <string name="none">هیچ</string>
     <string name="other">سایر موارد</string>
-    <string name="empty_file">Prazna datoteka</string>
+    <string name="empty_file">فایل خالی</string>
     <string name="break_page_pdf_print">Prekid stranice (PDF/printanje)</string>
-    <string name="underline">خط زیر</string>
+    <string name="underline">زیرخط</string>
     <string name="underline_hex_color_wether_or_not_to_description__appspecific">کد های رنگی بر اساس رنگشان زیرخط‌ دار بشوند یا نه</string>
     <string name="underline_hex_color_codes">زیر خط دار کردن کد های رنگی</string>
     <string name="insert_current_date_when_starting_new_task">هنگامی که کار جدید ثبت می‌کنم تاریخ امروز را وارد کن</string>
@@ -162,8 +165,8 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="highlight_line_ending_if_two_or_more_spaces">فاصله‌های پایان خطوط را رنگی می‌کند</string>
     <string name="use_monospace_for_code">از فونت monospace برای کد استفاده کنید</string>
     <string name="disable_code_block_highlight">غیرفعال کردن هایلایت کردن بلوک‌های کد</string>
-    <string name="auto_renumber_ordered_list">Auto-renumber ordered lists</string>
-    <string name="auto_renumber_ordered_list_slowdown">This option may impact app performance.</string>
+    <string name="auto_renumber_ordered_list">شماره‌گذاری‌ خودکار لیست‌های مرتب</string>
+    <string name="auto_renumber_ordered_list_slowdown">این گزینه بر عملکرد برنامه تاثیر می‌گذارد.</string>
     <string name="use_different_fonttype_slow_down">از یک نوع فونت دیگر استفاده کنید. تغییر آن به صورت پویا بر عملکرد اپ تاثیر می گذارد.</string>
     <string name="general">عمومی</string>
     <string name="resources">منابع</string>
@@ -172,11 +175,12 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="archive_does_move_done_tasks">کارهای انجام شده را به فایلی در یک پوشه انتقال دهید</string>
     <string name="sort_tasks_by_selected_order">مرتب سازی لیست کار ها بر اساس گزینه انتخاب شده</string>
     <string name="special_key">کلید ویژه</string>
+    <string name="asciidoc_special_key">محتوای خاص اَسکیداک</string>
     <string name="key_page_up">بالا بردن صفحه (Page Up)</string>
     <string name="key_page_down">پایین بردن صفحه (Page Down)</string>
-    <string name="move_text_one_line_up">متن رو یک خط ببر بالا</string>
-    <string name="move_text_one_line_down">متن رو یک خط ببر پایین</string>
-    <string name="start_new_line_below">Start new line below</string>
+    <string name="move_text_one_line_up">یک خط بالا بردن متن</string>
+    <string name="move_text_one_line_down">یک خط پایین بردن متن</string>
+    <string name="start_new_line_below">باز کردن خط جدید زیر نشانگر</string>
     <string name="key_pos_1">ابتدای خط (کلید Home)</string>
     <string name="key_pos_end">انتهای خط (کلید End)</string>
     <string name="key_pos_1_document">آغاز پرونده</string>
@@ -185,12 +189,16 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="key_tab">Tabulator</string>
     <string name="start_on_bottom">شروع از پایین</string>
     <string name="start_on_bottom_when_loading_document">بعد از اینکه پرونده بارگزاری شد، موقعیت مکان‌نما در انتهای پرونده قرار بگیرد</string>
-    <string name="unordered_list_character">کاراکتر لیست بدون ترتیب</string>
+    <string name="unordered_list_character">نشانه‌ی کنار لیست‌های غیر عددی</string>
     <string name="character_to_start_items_of_unordered_list_with">از کدوم کاراکتر برای مشخص کردن لیست‌های بدون ترتیب استفاده شود</string>
     <string name="unordered_list_char_dash">خط فاصله (-)</string>
     <string name="unordered_list_char_asterisk">ستاره (*)</string>
     <string name="unordered_list_char_plus">مثبت (+)</string>
     <string name="filemanager_doesnot_supply_required_data__appspecific">مارکور فقط می‌تواند فایل‌هایی را ویرایش کند که محلی هستند و به صورت آفلاین در دسترس هستند و فایل منیجر‌هایی را که مسیر کامل فایل را نمی‌دهند را ساپورت نمی‌کند.</string>
+    <string name="file_does_not_exist_and_cant_be_created">فایل یا پوشه وجود ندارد و امکان ایجاد آن وجود ندارد</string>
+    <string name="permissions">دسترسی‌ها</string>
+    <string name="permission_paths_revert">بازگشت تنظیمات به مسیر پیش‌فرض؟</string>
+    <string name="permission_not_granted">دسترسی داده نشد</string>
     <string name="sync_to_local_folder_notice">Note: Sync apps may place files in custom folders. Open them by changing Markor\'s document folder accordingly, or in another file manager.</string>
     <string name="vertical_alignment">Vertical alignment</string>
     <string name="horizontal_alignment">Horizontal alignment</string>
@@ -200,6 +208,8 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="top">بالا</string>
     <string name="bottom">پایین</string>
     <string name="center">وسط</string>
+    <string name="actionbutton_spacing">فاصله بین دکمه‌های عملیاتی</string>
+    <string name="horizontal_space_between_actionbuttons">فاصله‌ی افقی بین دکمه‌هایی عملیاتی</string>
     <string name="center_text">متن وسط باشد</string>
     <string name="edit_text_in_center_of_screen">متن را در وسط صفحه‌نمایش ویرایش کنید</string>
     <string name="clipboard">Clipboard</string>
@@ -209,23 +219,23 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="translate">ترجمه</string>
     <string name="more_info_and_help">اطّلاعات بیش‌تر و راهنمایی</string>
     <string name="report_bugs">گزارش اشکالات</string>
-    <string name="join_community">Приєднатися до спільноти</string>
-    <string name="bug_reports_suggest_improvements">இந்த செயலி குறித்த கருத்துக்கள் மற்றும் பிழைகளை தெரிவிக்கவும் அல்லது மேம்படுத்தத்தல்களை பரிந்துரைக்கவும்</string>
+    <string name="join_community">به انجمن بپیوندید</string>
+    <string name="bug_reports_suggest_improvements">به تیم توسعه‌، بازخورد، اعلام باگ یا پیشنهاداتی جهت بهتر شدن برنامه بدهید</string>
     <string name="help_translating_this_app">மற்ற மொழிகளில் இந்த செயலியை மொழிபெயர்க்கவும்</string>
     <string name="source_code">کُد منبع</string>
-    <string name="project_license">项目开源协议</string>
-    <string name="contribute_code_to_this_project_anybody_welcome">Contribute code to the project. Everybody is welcome to do so, including newcomers</string>
-    <string name="project_team">فريق المشروع</string>
+    <string name="project_license">پروانه‌ی پروژه</string>
+    <string name="contribute_code_to_this_project_anybody_welcome">همه آزادند تا به این پروژه کد اضافه کنند. حتا تازه‌کارها</string>
+    <string name="project_team">تیم پروژه</string>
     <string name="contributors_public_add_yourself_description">Show contributor info. Provide it to be shown here on an opt-in basis after contributing</string>
-    <string name="descending">نزولی</string>
-    <string name="ascending">صعودی</string>
-    <string name="disable_spelling_underline">غیر فعال کردن زیرخط املا</string>
+    <string name="descending">رو به پایین</string>
+    <string name="ascending">رو به بالا</string>
+    <string name="disable_spelling_underline">غیر فعال کردن زیرخط غلط املایی</string>
     <string name="spellcheck_keyboard_suggestion_stay_red_underline_vanishes">Keyboard suggestions stay, red underline vanishes</string>
     <string name="location">مکان</string>
     <string name="text_lines">خطوط متن</string>
     <string name="text_characters">نویسه‌های متن</string>
     <string name="text_words">واژگان متن</string>
-    <string name="directory">دایرکتوری</string>
+    <string name="directory">پوشه</string>
     <string name="recently_viewed_documents">سندهایی که اخیرا استفاده شده است</string>
     <string name="details">ریزگان</string>
     <string name="calendar">سالنامه</string>
@@ -302,10 +312,12 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="list_in_recent_files">List in recent files</string>
     <string name="reload">بارگزاری مجدد</string>
     <string name="wrap_words">Wrap words</string>
+    <string name="line_numbers">شماره‌ی خطوط</string>
     <string name="soft_break_if_not_fit_to_width_else_enable_horizontal_scrolling">Soft break if text doesn\'t fit to screen width. Else enable horizontal scrolling.</string>
     <string name="recursive_search_in_current_directory">Recursive search in current directory.</string>
     <string name="always_open_with_this_app">Always open with this app</string>
     <string name="always_open_files_with_this_app_when_list_contains_file_extension">Always open files with this app when the list contains the file extension. Use \'None, .html, .css , .js\' for example if you want to edit web files and those without file extension.</string>
+    <string name="open_file_with">باز کردن فایل به‌وسیله‌ی</string>
     <string name="rotate">چرخش</string>
     <string name="template">تمپلیت</string>
     <string name="send_debug_log">فرستادن گزارش های اشکال زدایی</string>
@@ -419,9 +431,18 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="due_today">سررسید امروز</string>
     <string name="due_future">سررسید در آینده</string>
     <string name="completed">تمام شده</string>
+    <string name="advanced_filtering">صافی پیشرفته</string>
     <string name="match_any">مطالبقت با هر کدام</string>
     <string name="match_all">مطابقت با همه</string>
     <string name="dynamic_notebook_root_links">Dynamic search for notebook root</string>
     <string name="search_dynamically_for_notebook_root">In order to follow wiki links, dynamically search for the notebook.zim file to identify the root directory for the current notebook. Check this if you use multiple zim notebooks or the notebook directory set in the app does not correspond to your zim notebook.</string>
     <string name="share_into_format">Share into - Format</string>
+    <string name="auto_format">تعیین فرمت خودکار</string>
+    <string name="insert_snippet">جای‌گذاری اِسنیپتِ</string>
+    <string name="error_could_not_open_file">ارور: فایل باز نشد.</string>
+    <string name="document_error_clip">ارور: متن به کلیپبرد افزوده شد.</string>
+    <string name="wont_save_min_length">جهت جلوگیری از ازدست‌رفتن داده، فایل‌هایی با تعداد کاراکتر کمتر از %d به‌صورت خودکار ذخیره نخواهند شد.</string>
+    <string name="advanced_filtering_help"><![CDATA[<small><a href="https://www.github.com/gsantner/markor/discussions/1940">
+سینتکس صافی پیشرفته </a></small>]]></string>
+    <string name="filter">صافی</string>
 </resources>
