--- a/app/src/main/res/values-it/strings.xml
+++ b/app/src/main/res/values-it/strings.xml
@@ -443,8 +443,8 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="search_dynamically_for_notebook_root">Per seguire i collegamenti wiki, cerca dinamicamente il file notebook.zim per identificare la directory radice per il notebook corrente. Spunta questa opzione se usi più notebook zim o la directory del notebook impostata nell\'app non corrisponde al tuo notebook zim.</string>
     <string name="share_into_format_prefix_for_text_shared">Formato/Prefisso per il testo condiviso in Markor. Segue le regole SimpleDateFormat di Android.\n\nUsa il segnaposto {{text}} per posizionare il testo condiviso. Se non specificato, il testo condiviso è aggiunto alla fine e il formato usato come prefisso.</string>
     <string name="share_into_format">Condividi in - Formato</string>
-    <string name="attachment_folder_name">Nome della cartella allegati</string>
-    <string name="attachment_folder_name_desc">Cartella sotto quella attuale dove verranno salvati gli allegati. Se lasciato vuoto, gli allegati verranno salvati nella cartella attuale.</string>
+    <string name="attachment_folder_name">Cartella degli allegati</string>
+    <string name="attachment_folder_name_desc">Sottocartella in cui verranno salvati gli allegati. Se lasciato in bianco, gli allegati verranno salvati nella cartella attuale.</string>
     <string name="auto_format">Autoformattazione</string>
     <string name="insert_snippet">Inserisci snippet</string>
     <string name="error_could_not_open_file">Errore: impossibile aprire il file.</string>
